添加协程用例

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -195,6 +195,16 @@
             android:textAllCaps="false"
             android:textColor="@android:color/white" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/close_channel_btn"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="@string/close_channel"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white" />
+
     </LinearLayout>
 
 
